--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 python-dotenv==1.0.1
 fastapi==0.112.2
+httpx==0.27.0
 psycopg2-binary==2.9.3
+pytest==8.3.2
 redis==5.0.8
 SQLAlchemy==2.0.34
 uvicorn==0.30.6
