--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-DB_NAME=sqlite.db
-DB_USER=
-DB_PASSWORD=
-DB_HOST=
-DB_PORT=
+DB_NAME=montseguros
+DB_USER=postgres
+DB_PASSWORD=teste123
+DB_HOST=db
+DB_PORT=5432
+REDIS_HOST=redis
